--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
               ></textarea>
             </label>
           </div>
-          <div class="modal-field modal-privacy">
+          <div class="modal-privacy">
             <input
               type="checkbox"
               name="privacy"
